# automaton_practice

./: README.md  deno.json
.github/workflows/: deploy.yml
crates/automaton_trial/: Cargo.toml
crates/automaton_trial/src/: lib.rs  regex.rs
ui/: index.html  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css
