[package]
name = "automaton_trial"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = "0.4.5"
anyhow = "1.0.98"
thiserror = "2.0.12"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.219"
tsify = "0.5.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
